--- a/PB_Assignment5.ipynb
+++ b/PB_Assignment5.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
@@ -75,14 +75,14 @@
     "# instead of changing the excel file manually, I load the specific data directly in python by loading the explicite sheet and skipping the first three rows. Also, I only load the first three columns as those are the one we need.\n",
     "exp = pd.read_excel(wd/'data'/'FRBNY-SCE-Data.xlsx', sheet_name = 'Inflation expectations', skiprows=3, usecols=[0,1,2])\n",
     "\n",
-    "exp.rename(columns={'Unnamed: 0':'date'}, inplace=True)\n",
+    "exp.rename(columns={exp.columns[0]:'date'}, inplace=True)\n",
     "\n",
     "print(exp.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
@@ -144,25 +144,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert date column of inflation dataframe to datetime\n",
     "inf.date  = pd.to_datetime(inf.date)\n",
-    "# set frequency to montly\n",
+    "# set frequency to monthly\n",
     "inf.date = pd.PeriodIndex(inf.date, freq='m')\n",
     "\n",
     "# convert the date column of the expectation dataframe to a string and add '01', then convert to datetime\n",
     "exp.date = exp.date.astype('str') + '01'\n",
     "exp.date = pd.to_datetime(exp.date, format = '%Y%m%d')\n",
-    "# set frequency to montly\n",
+    "# set frequency to monthly\n",
     "exp.date = pd.PeriodIndex(exp.date, freq='m')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,17 +214,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 436,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>inflation</th>\n",
+       "      <th>med1y</th>\n",
+       "      <th>med3y</th>\n",
+       "      <th>ferror</th>\n",
+       "      <th>frevision</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-06</th>\n",
+       "      <td>1.754417</td>\n",
+       "      <td>3.090884</td>\n",
+       "      <td>3.416846</td>\n",
+       "      <td>-1.018543</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-07</th>\n",
+       "      <td>1.960682</td>\n",
+       "      <td>3.162522</td>\n",
+       "      <td>3.310545</td>\n",
+       "      <td>-1.170193</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-08</th>\n",
+       "      <td>1.518368</td>\n",
+       "      <td>3.395071</td>\n",
+       "      <td>3.799491</td>\n",
+       "      <td>-1.695460</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09</th>\n",
+       "      <td>1.184925</td>\n",
+       "      <td>3.367290</td>\n",
+       "      <td>3.546918</td>\n",
+       "      <td>-1.709371</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-10</th>\n",
+       "      <td>0.963613</td>\n",
+       "      <td>3.174733</td>\n",
+       "      <td>3.196597</td>\n",
+       "      <td>-1.510392</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06</th>\n",
+       "      <td>5.391451</td>\n",
+       "      <td>4.801745</td>\n",
+       "      <td>3.546918</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.139308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07</th>\n",
+       "      <td>5.365475</td>\n",
+       "      <td>4.842451</td>\n",
+       "      <td>3.711669</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.263085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08</th>\n",
+       "      <td>5.251272</td>\n",
+       "      <td>5.179827</td>\n",
+       "      <td>3.999662</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.678395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09</th>\n",
+       "      <td>5.390349</td>\n",
+       "      <td>5.310169</td>\n",
+       "      <td>4.193985</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.935375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10</th>\n",
+       "      <td>6.221869</td>\n",
+       "      <td>5.653467</td>\n",
+       "      <td>4.211177</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.274592</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         inflation     med1y     med3y    ferror  frevision\n",
+       "date                                                       \n",
+       "2013-06   1.754417  3.090884  3.416846 -1.018543        NaN\n",
+       "2013-07   1.960682  3.162522  3.310545 -1.170193        NaN\n",
+       "2013-08   1.518368  3.395071  3.799491 -1.695460        NaN\n",
+       "2013-09   1.184925  3.367290  3.546918 -1.709371        NaN\n",
+       "2013-10   0.963613  3.174733  3.196597 -1.510392        NaN\n",
+       "...            ...       ...       ...       ...        ...\n",
+       "2021-06   5.391451  4.801745  3.546918       NaN   2.139308\n",
+       "2021-07   5.365475  4.842451  3.711669       NaN   2.263085\n",
+       "2021-08   5.251272  5.179827  3.999662       NaN   2.678395\n",
+       "2021-09   5.390349  5.310169  4.193985       NaN   2.935375\n",
+       "2021-10   6.221869  5.653467  4.211177       NaN   3.274592\n",
+       "\n",
+       "[101 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 436,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "####### check again !!!!!\n",
     "\n",
-    "df['med1y_shift'] = df['med1y'].shift(1)\n",
-    "df['med3y_shift'] = df['med3y'].shift(3)\n",
+    "# set all to point t\n",
     "\n",
-    "df['ferror'] = df.inflation - df.med1y_shift\n",
-    "df['frevision'] = df.med1y_shift - df.med3y_shift"
+    "df['ferror'] = df.inflation.shift(-12) - df.med1y \n",
+    "df['frevision'] = df.med1y - df.med3y.shift(24) \n",
+    "df"
    ]
   },
   {
@@ -236,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
@@ -287,29 +440,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2013-09</th>\n",
-       "      <td>-2.210146</td>\n",
-       "      <td>-0.021775</td>\n",
+       "      <th>2015-06</th>\n",
+       "      <td>-2.002674</td>\n",
+       "      <td>-0.416846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-10</th>\n",
-       "      <td>-2.403677</td>\n",
-       "      <td>0.056744</td>\n",
+       "      <th>2015-07</th>\n",
+       "      <td>-2.128218</td>\n",
+       "      <td>-0.355189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-11</th>\n",
-       "      <td>-1.937660</td>\n",
-       "      <td>-0.624758</td>\n",
+       "      <th>2015-08</th>\n",
+       "      <td>-1.730700</td>\n",
+       "      <td>-1.005916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2013-12</th>\n",
-       "      <td>-1.694861</td>\n",
-       "      <td>-0.350321</td>\n",
+       "      <th>2015-09</th>\n",
+       "      <td>-1.270875</td>\n",
+       "      <td>-0.812259</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-01</th>\n",
-       "      <td>-1.558893</td>\n",
-       "      <td>-0.058756</td>\n",
+       "      <th>2015-10</th>\n",
+       "      <td>-1.187338</td>\n",
+       "      <td>-0.373271</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -318,14 +471,14 @@
       "text/plain": [
        "           ferror  frevision\n",
        "date                        \n",
-       "2013-09 -2.210146  -0.021775\n",
-       "2013-10 -2.403677   0.056744\n",
-       "2013-11 -1.937660  -0.624758\n",
-       "2013-12 -1.694861  -0.350321\n",
-       "2014-01 -1.558893  -0.058756"
+       "2015-06 -2.002674  -0.416846\n",
+       "2015-07 -2.128218  -0.355189\n",
+       "2015-08 -1.730700  -1.005916\n",
+       "2015-09 -1.270875  -0.812259\n",
+       "2015-10 -1.187338  -0.373271"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 438,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -357,25 +510,25 @@
        "<table class=\"simpletable\">\n",
        "<caption>OLS Regression Results</caption>\n",
        "<tr>\n",
-       "  <th>Dep. Variable:</th>         <td>ferror</td>      <th>  R-squared:         </th> <td>   0.183</td>\n",
+       "  <th>Dep. Variable:</th>         <td>ferror</td>      <th>  R-squared:         </th> <td>   0.001</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.174</td>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>  -0.015</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   23.15</td>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td> 0.04515</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Mon, 17 Jan 2022</td> <th>  Prob (F-statistic):</th> <td>5.56e-06</td>\n",
+       "  <th>Date:</th>             <td>Mon, 17 Jan 2022</td> <th>  Prob (F-statistic):</th>  <td> 0.832</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>15:50:23</td>     <th>  Log-Likelihood:    </th> <td> -126.59</td>\n",
+       "  <th>Time:</th>                 <td>18:00:21</td>     <th>  Log-Likelihood:    </th> <td> -103.28</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>No. Observations:</th>      <td>    98</td>      <th>  AIC:               </th> <td>   257.2</td>\n",
+       "  <th>No. Observations:</th>      <td>    65</td>      <th>  AIC:               </th> <td>   210.6</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>    96</td>      <th>  BIC:               </th> <td>   262.4</td>\n",
+       "  <th>Df Residuals:</th>          <td>    63</td>      <th>  BIC:               </th> <td>   214.9</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>     <td> </td>   \n",
@@ -389,24 +542,24 @@
        "      <td></td>         <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Intercept</th> <td>   -1.1840</td> <td>    0.160</td> <td>   -7.423</td> <td> 0.000</td> <td>   -1.497</td> <td>   -0.871</td>\n",
+       "  <th>Intercept</th> <td>   -0.5279</td> <td>    0.319</td> <td>   -1.656</td> <td> 0.098</td> <td>   -1.153</td> <td>    0.097</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>frevision</th> <td>    1.0989</td> <td>    0.228</td> <td>    4.812</td> <td> 0.000</td> <td>    0.651</td> <td>    1.547</td>\n",
+       "  <th>frevision</th> <td>   -0.1007</td> <td>    0.474</td> <td>   -0.212</td> <td> 0.832</td> <td>   -1.030</td> <td>    0.828</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "  <th>Omnibus:</th>       <td> 1.044</td> <th>  Durbin-Watson:     </th> <td>   0.291</td>\n",
+       "  <th>Omnibus:</th>       <td>24.573</td> <th>  Durbin-Watson:     </th> <td>   0.114</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.593</td> <th>  Jarque-Bera (JB):  </th> <td>   1.136</td>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td> <th>  Jarque-Bera (JB):  </th> <td>  36.159</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Skew:</th>          <td>-0.223</td> <th>  Prob(JB):          </th> <td>   0.567</td>\n",
+       "  <th>Skew:</th>          <td> 1.484</td> <th>  Prob(JB):          </th> <td>1.41e-08</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 2.717</td> <th>  Cond. No.          </th> <td>    2.64</td>\n",
+       "  <th>Kurtosis:</th>      <td> 5.130</td> <th>  Cond. No.          </th> <td>    3.15</td>\n",
        "</tr>\n",
        "</table><br/><br/>Notes:<br/>[1] Standard Errors are heteroscedasticity and autocorrelation robust (HAC) using 3 lags and without small sample correction"
       ],
@@ -415,25 +568,25 @@
        "\"\"\"\n",
        "                            OLS Regression Results                            \n",
        "==============================================================================\n",
-       "Dep. Variable:                 ferror   R-squared:                       0.183\n",
-       "Model:                            OLS   Adj. R-squared:                  0.174\n",
-       "Method:                 Least Squares   F-statistic:                     23.15\n",
-       "Date:                Mon, 17 Jan 2022   Prob (F-statistic):           5.56e-06\n",
-       "Time:                        15:50:23   Log-Likelihood:                -126.59\n",
-       "No. Observations:                  98   AIC:                             257.2\n",
-       "Df Residuals:                      96   BIC:                             262.4\n",
+       "Dep. Variable:                 ferror   R-squared:                       0.001\n",
+       "Model:                            OLS   Adj. R-squared:                 -0.015\n",
+       "Method:                 Least Squares   F-statistic:                   0.04515\n",
+       "Date:                Mon, 17 Jan 2022   Prob (F-statistic):              0.832\n",
+       "Time:                        18:00:21   Log-Likelihood:                -103.28\n",
+       "No. Observations:                  65   AIC:                             210.6\n",
+       "Df Residuals:                      63   BIC:                             214.9\n",
        "Df Model:                           1                                         \n",
        "Covariance Type:                  HAC                                         \n",
        "==============================================================================\n",
        "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
        "------------------------------------------------------------------------------\n",
-       "Intercept     -1.1840      0.160     -7.423      0.000      -1.497      -0.871\n",
-       "frevision      1.0989      0.228      4.812      0.000       0.651       1.547\n",
+       "Intercept     -0.5279      0.319     -1.656      0.098      -1.153       0.097\n",
+       "frevision     -0.1007      0.474     -0.212      0.832      -1.030       0.828\n",
        "==============================================================================\n",
-       "Omnibus:                        1.044   Durbin-Watson:                   0.291\n",
-       "Prob(Omnibus):                  0.593   Jarque-Bera (JB):                1.136\n",
-       "Skew:                          -0.223   Prob(JB):                        0.567\n",
-       "Kurtosis:                       2.717   Cond. No.                         2.64\n",
+       "Omnibus:                       24.573   Durbin-Watson:                   0.114\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               36.159\n",
+       "Skew:                           1.484   Prob(JB):                     1.41e-08\n",
+       "Kurtosis:                       5.130   Cond. No.                         3.15\n",
        "==============================================================================\n",
        "\n",
        "Notes:\n",
@@ -441,7 +594,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 226,
+     "execution_count": 441,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +609,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 10: Interpretation"
+    "### Step 10: Interpretation\n",
+    "\n",
+    "- correlation\n",
+    "- Rational Expectation: $\\beta$ should be not significantlly different from 0\n",
+    "\n",
+    "\n",
+    "- small sample size"
    ]
   }
  ],
