--- a/PB_Assignment5.ipynb
+++ b/PB_Assignment5.ipynb
@@ -5,14 +5,12 @@
    "metadata": {},
    "source": [
     "## Computational Macroeconomics Assignment 5\n",
-    "Paula Beck\n",
-    "\n",
-    "handed in: 29.01.2022"
+    "#### Paula Beck - 29.01.2022"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +24,7 @@
     "\n",
     "\n",
     "# set path\n",
-    "wd = Path()"
+    "wd = Path.cwd()"
    ]
   },
   {
@@ -41,12 +39,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2: load data"
+    "### Step 2: load data in python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +70,7 @@
    "source": [
     "# load consumer expectation data\n",
     "\n",
-    "# instead of changing the excel file manually, I load the specific data directly in python by loading the explicite sheet and skipping the first three rows. Also, I only load the first three columns as those are the one we need.\n",
+    "# instead of changing the excel file manually, I manipulate the specific data directly in python by loading the explicite sheet and skipping the first three rows. Also, I only load the first three columns as those are the one we need.\n",
     "exp = pd.read_excel(wd/'data'/'FRBNY-SCE-Data.xlsx', sheet_name = 'Inflation expectations', skiprows=3, usecols=[0,1,2])\n",
     "\n",
     "exp.rename(columns={exp.columns[0]:'date'}, inplace=True)\n",
@@ -82,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -110,12 +108,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 3: convert to datetime"
+    "### Step 3: convert date columns to datetime-type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,12 +173,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4: rename columns"
+    "### Step 4: rename expectation columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,12 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "# merge expectation data to inflation dataframe based on the index\n",
-    "# inner merge such that only those rows remain that are not NA for both data sources\n",
+    "# inner merge such that only those rows remain that exist for both data sources\n",
     "df = inf.merge(exp, on='date', how='inner')"
    ]
   },
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -294,57 +292,8 @@
        "      <td>-1.510392</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-06</th>\n",
-       "      <td>5.391451</td>\n",
-       "      <td>4.801745</td>\n",
-       "      <td>3.546918</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.139308</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-07</th>\n",
-       "      <td>5.365475</td>\n",
-       "      <td>4.842451</td>\n",
-       "      <td>3.711669</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.263085</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-08</th>\n",
-       "      <td>5.251272</td>\n",
-       "      <td>5.179827</td>\n",
-       "      <td>3.999662</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.678395</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-09</th>\n",
-       "      <td>5.390349</td>\n",
-       "      <td>5.310169</td>\n",
-       "      <td>4.193985</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.935375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-10</th>\n",
-       "      <td>6.221869</td>\n",
-       "      <td>5.653467</td>\n",
-       "      <td>4.211177</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.274592</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>101 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -354,18 +303,10 @@
        "2013-07   1.960682  3.162522  3.310545 -1.170193        NaN\n",
        "2013-08   1.518368  3.395071  3.799491 -1.695460        NaN\n",
        "2013-09   1.184925  3.367290  3.546918 -1.709371        NaN\n",
-       "2013-10   0.963613  3.174733  3.196597 -1.510392        NaN\n",
-       "...            ...       ...       ...       ...        ...\n",
-       "2021-06   5.391451  4.801745  3.546918       NaN   2.139308\n",
-       "2021-07   5.365475  4.842451  3.711669       NaN   2.263085\n",
-       "2021-08   5.251272  5.179827  3.999662       NaN   2.678395\n",
-       "2021-09   5.390349  5.310169  4.193985       NaN   2.935375\n",
-       "2021-10   6.221869  5.653467  4.211177       NaN   3.274592\n",
-       "\n",
-       "[101 rows x 5 columns]"
+       "2013-10   0.963613  3.174733  3.196597 -1.510392        NaN"
       ]
      },
-     "execution_count": 436,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +318,7 @@
     "\n",
     "df['ferror'] = df.inflation.shift(-12) - df.med1y \n",
     "df['frevision'] = df.med1y - df.med3y.shift(24) \n",
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -389,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,87 +346,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ferror</th>\n",
-       "      <th>frevision</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2015-06</th>\n",
-       "      <td>-2.002674</td>\n",
-       "      <td>-0.416846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-07</th>\n",
-       "      <td>-2.128218</td>\n",
-       "      <td>-0.355189</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-08</th>\n",
-       "      <td>-1.730700</td>\n",
-       "      <td>-1.005916</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-09</th>\n",
-       "      <td>-1.270875</td>\n",
-       "      <td>-0.812259</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-10</th>\n",
-       "      <td>-1.187338</td>\n",
-       "      <td>-0.373271</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           ferror  frevision\n",
-       "date                        \n",
-       "2015-06 -2.002674  -0.416846\n",
-       "2015-07 -2.128218  -0.355189\n",
-       "2015-08 -1.730700  -1.005916\n",
-       "2015-09 -1.270875  -0.812259\n",
-       "2015-10 -1.187338  -0.373271"
-      ]
-     },
-     "execution_count": 438,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(65, 2)\n"
+     ]
     }
    ],
    "source": [
     "df = df.dropna()\n",
-    "df.head()"
+    "print(df.shape)"
    ]
   },
   {
@@ -501,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -519,10 +393,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td> 0.04515</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Mon, 17 Jan 2022</td> <th>  Prob (F-statistic):</th>  <td> 0.832</td> \n",
+       "  <th>Date:</th>             <td>Thu, 20 Jan 2022</td> <th>  Prob (F-statistic):</th>  <td> 0.832</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>18:00:21</td>     <th>  Log-Likelihood:    </th> <td> -103.28</td>\n",
+       "  <th>Time:</th>                 <td>12:46:59</td>     <th>  Log-Likelihood:    </th> <td> -103.28</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    65</td>      <th>  AIC:               </th> <td>   210.6</td>\n",
@@ -571,8 +445,8 @@
        "Dep. Variable:                 ferror   R-squared:                       0.001\n",
        "Model:                            OLS   Adj. R-squared:                 -0.015\n",
        "Method:                 Least Squares   F-statistic:                   0.04515\n",
-       "Date:                Mon, 17 Jan 2022   Prob (F-statistic):              0.832\n",
-       "Time:                        18:00:21   Log-Likelihood:                -103.28\n",
+       "Date:                Thu, 20 Jan 2022   Prob (F-statistic):              0.832\n",
+       "Time:                        12:46:59   Log-Likelihood:                -103.28\n",
        "No. Observations:                  65   AIC:                             210.6\n",
        "Df Residuals:                      63   BIC:                             214.9\n",
        "Df Model:                           1                                         \n",
@@ -594,7 +468,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 441,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,11 +485,7 @@
    "source": [
     "### Step 10: Interpretation\n",
     "\n",
-    "- correlation\n",
-    "- Rational Expectation: $\\beta$ should be not significantlly different from 0\n",
-    "\n",
-    "\n",
-    "- small sample size"
+    "$\\beta$ can be interpreted as the relation between the forecast error and the forecast revision. Under rational expectations, the coefficient should be not significantly different from zero. We find that this in indeed the case. Coibion and Gorodnychenko (2015), henceforth CG, however, find a significant correlation between the two. A possible explanation for the difference is that we have a different dataset and a small sample size (65 observations). Also, CG use a survey of professional forecasters while our dataset consists of households inflation expectations."
    ]
   }
  ],
